--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Montserrat', sans-serif !important;
     color: var(--color-text-default);
     max-width: 1280px;
     margin: 0 auto;
@@ -16,6 +16,7 @@ body {
 }
 
 * {
+    font-family: inherit !important;
     padding: 0;
     margin: 0;
     border: 0;
